[package]
name = "conways_gos"
version = "0.1.0"
edition = "2018"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
byteorder = "1.3"
env_logger = "0.8"
getrandom = "0.2"
line_drawing = "0.8"
log = "0.4"
pixels = { path = "../../../pixels",  version = "0.2.0" }
randomize = "3.0"
winit = "0.24"
winit_input_helper = "0.9"
rand = "0.8.0"
